fix: scrollbar unnecessarily appearing

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,9 +3,10 @@ html, body, #root {
   width: 100%;
   margin: 0;
   padding: 0;
-  background-color: transparent;
-  overflow-x: hidden; /* Prevent horizontal scrolling */
+  overflow: hidden;
+  box-sizing: border-box;
 }
+
 
 body {
   background: linear-gradient(120deg, #34495e, #3c3e4b, #34495e);
